# load-balance-tn-ntn-5g

./: .gitignore  README.md  core-control.pcap
docs/: ntn-status-summary.md  (+1 more)
openairinterface5g/nfapi/: CMakeLists.txt
openairinterface5g/nfapi/oai_integration/: nfapi_pnf.c  nfapi_vnf.c
openairinterface5g/nfapi/oai_integration/aerial/: CMakeLists.txt
openairinterface5g/nfapi/oai_integration/socket/: CMakeLists.txt
openairinterface5g/nfapi/oai_integration/wls_integration/: CMakeLists.txt
openairinterface5g/nfapi/open-nFAPI/: CMakeLists.txt
openairinterface5g/nfapi/open-nFAPI/common/public_inc/: nfapi.h
openairinterface5g/nfapi/open-nFAPI/fapi/inc/: nr_fapi_p7_utils.h
openairinterface5g/nfapi/open-nFAPI/fapi/src/: nr_fapi.c  nr_fapi_p7.c  nr_fapi_p7_utils.c
openairinterface5g/nfapi/open-nFAPI/utils/: CMakeLists.txt
openairinterface5g/nfapi/tests/: nr_fapi_test.h
openairinterface5g/nfapi/tests/p5/: nr_fapi_config_request_test.c  nr_fapi_config_response_test.c  nr_fapi_error_indication_test.c  nr_fapi_param_request_test.c  nr_fapi_param_response_test.c  nr_fapi_start_request_test.c  nr_fapi_start_response_test.c  nr_fapi_stop_indication_test.c  nr_fapi_stop_request_test.c
openairinterface5g/nfapi/tests/p7/: nr_fapi_crc_indication_test.c  nr_fapi_dci_inversion_test.c  nr_fapi_dl_tti_request_test.c  nr_fapi_rach_indication_test.c  nr_fapi_rx_data_indication_test.c  nr_fapi_slot_indication_test.c  nr_fapi_srs_indication_test.c  nr_fapi_tx_data_request_test.c  nr_fapi_uci_indication_test.c  nr_fapi_ul_dci_request_test.c  nr_fapi_ul_tti_request_test.c
(+439 files in other folders)
